fix navbar on top add z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ h1 {
 h2 {
     font-family: var(--primary-font-family);
     text-transform: uppercase;
-    color: var(--tertiary-color);
+    color: var(--secondary-color);
     text-align: center;
 }
 
@@ -66,6 +66,10 @@ nav>a {
 }
 
 nav {
+    position: fixed;
+    top: 0;
+    z-index: 100;
+    width: 100%;
     border: 1px solid var(--primary-color);
     background-color: var(--secondary-color);
     display: flex;
@@ -105,6 +109,8 @@ nav {
 
 /* Main Image and Intro*/
 #main {
+
+
     margin-bottom: 100px;
 }
 
@@ -113,6 +119,7 @@ nav {
 }
 
 #main-image {
+    z-index: 1;
     height: 600px;
     width: 100%;
     background-image: url('../images/main-image.jpg');
